Fix cookie size limit issue with max length and truncation
- Add MAX_COOKIE_SIZE constant (3000 chars) to CompressedStringSetting
- Truncate compressed data if it exceeds cookie size limit
- Add maxlength="2000" attribute to textarea to prevent excessive input
- Update description to mention character limit
- Add logging for cookie size warnings

--- a/searx/templates/simple/preferences/quick_summary.html
+++ b/searx/templates/simple/preferences/quick_summary.html
@@ -73,10 +73,11 @@
            name="quick_summary_prompt" {{- ' ' -}}
            aria-labelledby="pref_quick_summary_settings" {{- ' ' -}}
            rows="10" {{- ' ' -}}
+           maxlength="2000" {{- ' ' -}}
            placeholder="{{ _('Leave empty to use default prompt. Use {query} for the search query and {results_text} for the formatted results.') }}"{{- '' -}}
     >{{ preferences.get_value('quick_summary_prompt') or '' }}</textarea>{{- '' -}}
   </div>{{- '' -}}
   <div class="description">
-    {{- _('Customize the prompt template for generating summaries. Available placeholders: {query}, {results_text}') -}}
+    {{- _('Customize the prompt template for generating summaries. Available placeholders: {query}, {results_text}. Maximum 2000 characters.') -}}
   </div>{{- '' -}}
 </fieldset>{{- '' -}}
